Added Dto layer, also added mapper to Student and Teacher also. Changed the collection storage subject. Added enum with subject type. Added functionality removed Student and Teacher.